fixing about image on mobile hopefully

--- a/src/src/app/about/about.component.css
+++ b/src/src/app/about/about.component.css
@@ -102,5 +102,6 @@
 }
 
 #about-fav img{
-height: 100%;
+  height: 100%;
+  width: auto;
 }
